@@ -1,5 +1,10 @@
-<script src="{% if secure %}https://ssl{% else %}http://www{% endif %}.google-analytics.com/urchin.js" type="text/javascript"> </script>
+{% if shop.options.GOOGLE.USE_URCHIN %}<script src="{% if secure %}https://ssl{% else %}http://www{% endif %}.google-analytics.com/urchin.js" type="text/javascript"> </script>
 <script type="text/javascript">
 _uacct="{{GOOGLE_CODE}}";
 urchinTracker();
-</script>
+</script>{% else %}<script src='{% if secure %}https://ssl{% else %}http://www{% endif %}.google-analytics.com/ga.js' type='text/javascript'></script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("{{GOOGLE_CODE}}");
+pageTracker._initData();
+pageTracker._trackPageview();
+</script>{% endif %}
